<resources>
    <string name="app_name">Popular Movies Stage 2</string>

    <!-- Settings Menu -->
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="favorites">Favorites</string>

    <!-- Movie Detail -->
    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="plot">Plot</string>
    <string name="vote_average">Vote Average</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>


    <!-- Error messages -->
    <string name="no_network_connection">No network found, unable to retrieve movies</string>
    <string name="unrecognized_video_format">Unable to play video, unrecognized format.</string>
</resources>
