<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    // Reference https://developer.android.com/guide/topics/ui/layout/relative
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:background="@android:color/transparent"
            android:id="@+id/imagebutton_favorite_movie_button"
            android:layout_alignParentTop="true"
            android:layout_height="@dimen/button_favorite_size"
            android:layout_width="@dimen/button_favorite_size"
            android:src="@drawable/favorite_button_selector"
            android:layout_alignParentRight="true" />

        <ImageView
            android:id="@+id/imageview_movie_poster_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/start_data_top"
            android:layout_below="@+id/imagebutton_favorite_movie_button"/>
            <!---->/>

        <LinearLayout
            android:id="@+id/linear_layout_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_below="@+id/imageview_movie_poster_detail"
            android:layout_marginTop="@dimen/data_left_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                style="@style/font_bold_white"/>

            <TextView
                android:id="@+id/textview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/data_left_margin"
                style="@style/font_white"/>
        </LinearLayout>

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:text="@string/release_date"-->
            <!--android:layout_below="@+id/linear_layout_title"-->
            <!--style="@style/font_bold_white"-->
            <!--android:layout_marginTop="@dimen/data_layout_margin_top"/>-->

        <LinearLayout
            android:id="@+id/linear_layout_release_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_below="@+id/linear_layout_title"
            android:layout_marginTop="@dimen/data_layout_margin_top">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                style="@style/font_bold_white"/>

            <TextView
                android:id="@+id/textview_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/data_left_margin"
                style="@style/font_white"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_plot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_below="@+id/linear_layout_release_date"
            android:layout_marginTop="@dimen/data_layout_margin_top">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plot"
                style="@style/font_bold_white"/>
            <TextView
                android:id="@+id/textview_plot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/data_left_margin"
                style="@style/font_white"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear_layout_vote_average"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_below="@+id/linear_layout_plot"
            android:layout_marginTop="@dimen/data_layout_margin_top">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vote_average"
                style="@style/font_bold_white"/>
            <TextView
                android:id="@+id/textview_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/data_left_margin"
                style="@style/font_white"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_trailer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/linear_layout_vote_average"
            android:layout_marginTop="@dimen/data_layout_margin_top">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailers"
                style="@style/font_bold_white"/>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recyclerview_movie_detail_video">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_review"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/linear_layout_trailer"
            android:layout_marginTop="@dimen/data_layout_margin_top">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews"
                style="@style/font_bold_white"/>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recyclerview_movie_detail_review">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
